--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -1,7 +1,42 @@
-h1 {
-  color: red;
+body {
+  color: #333333;
+  font-family: arial;
+  max-width: 650px;
+  margin: 0 auto; /* first value for top and bottom, second left and right */
+  padding: 0 16px;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-img {
+footer {
+  color: #888888;
+  border-top: 1px solid #eeeeee;
+  margin-top: 16px;
+  padding: 16px 0;
+}
+
+header {
+  margin-top: 16px;
+  margin-bottom: 48px;
+}
+
+h1 {
+  font-size: 64px;
+  margin-bottom: 16px;
+}
+
+header a {
+  color: 888888;
+  margin-right: 16px;
+  text-decoration: none;  /* This removes the underline */
+}
+
+.portrait {
   width: 250px;
+}
+
+.main-content {
+  flex-grow: 1; /* This tells the object to take up any remaining space */
 }
