--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -5,7 +5,6 @@
 <head>
   <link rel='icon' href='/img/weather.png'>
   <link rel="stylesheet" href="/css/styles.css">
-  <script src='/js/app.js'></script>
 </head>
 
 <body>
@@ -13,10 +12,21 @@
   <div class='main-content'>
   {{>header}}
 
-  <p>Use this site foh yo weadher!</p>
+  <p>Use this site for your weather!</p>
+
+  <form>
+    <input placeholder="Location">
+    <button>Search</button>
+  </form>
+
+  <p id='message-1'></p>
+  <p id='message-2'></p>
+
   </div>
 
   {{>footer}}
+
+  <script src='/js/app.js'></script>
 </body>
 
 </html>
