--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -40,3 +40,16 @@ header a {
 .main-content {
   flex-grow: 1; /* This tells the object to take up any remaining space */
 }
+
+input {
+  border: 1px solid #cccccc;
+  padding: 8px
+}
+
+button {
+  cursor: pointer;
+  border: 1px solid #888888;
+  background: #888888;
+  color: white;
+  padding: 8px;
+}
